<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddMarkerDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/dialogTitleTextView"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_margin"
            android:text="@string/new_marker_title"
            android:textColor="@color/green_40"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/dialogEditText"
            android:layout_width="@dimen/zero_width"
            android:hint="@string/enter_a_comment"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialog_margin"
            android:layout_marginEnd="@dimen/dialog_margin"
            android:minHeight="@dimen/min_edit_text_height"
            android:maxLines="1"
            android:maxLength="40"
            android:lines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogTitleTextView"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_margin"
            android:layout_marginBottom="@dimen/dialog_margin"
            android:text="@string/cancelButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/positiveButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogEditText" />

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_margin"
            android:text="@string/confirmButton"
            app:layout_constraintBottom_toBottomOf="@+id/negativeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/negativeButton"
            app:layout_constraintTop_toTopOf="@+id/negativeButton"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>